--- a/style.css
+++ b/style.css
@@ -70,34 +70,108 @@ header button {
     border-radius: 12px;
    
 }
+.actions {
+    display: flex;
+    align-items: center;
+}
+
+.search input {
+    border: 1px solid #ccc;
+    padding: 5px;
+    border-radius: 3px;
+    margin-right: 20px;
+}
+
+.language {
+    position: relative;
+    margin-right: 20px;
+}
+
+.language span {
+    cursor: pointer;
+}
+
+.language ul {
+    position: absolute;
+    top: 20px;
+    right: 0;
+    list-style: none;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    display: none;
+}
+
+.language:hover ul {
+    display: block;
+}
+
+.language ul li {
+    padding: 5px 10px;
+}
+
+.language ul li a {
+    text-decoration: none;
+    color: #000;
+}
 .section button {
    
     display: flex;
     background-color: white;
 }
 
+#histor {
+    display: flex;
+    justify-content: center;
+    margin-top: 200px;
+    margin-bottom: 180px;
+    flex-direction: column;
+}
+
+.histo {
+   
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.histo h1 {
+    color: #c8102e;
+    font-size: 50px;
+    
+   
+}
+.flex {
+    display: flex;
+    margin-top: 80px;
+    margin-left: 40px;
+    justify-content: space-between;
+}
 
 .banner {
     background-color: #c8102e;
     color: white;
     padding: 20px 40px;
-    position: relative;
+    /* position: relative; */
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-radius: 0 0 20px 20px;
-    margin-bottom: 40px;
-    width: 40%;
+    /* border-radius: 0 0 20px 0; */
+    /* margin-bottom: 60px; */
+    width: 30%;
+    height: 150px;
+    border-bottom-right-radius: 100px ;
+    box-shadow: 0px 10px #de5e7d, 0px 20px #dbbcc3;
+    
 }
 
-.banner .text {
-    font-size: 24px;
+.banner p {
+    font-size: 30px;
+}
+.banner span {
+    font-size: 60px;
+    margin-left: 200px;
 }
 
-.banner .year {
-    font-size: 48px;
-    font-weight: bold;
-}
+
 
 .banner::before,
 .banner::after {
@@ -105,9 +179,9 @@ header button {
     position: absolute;
     bottom: 0;
     height: 20px;
-    width: 100%;
+    width: 92%;
     background: #c8102e;
-    border-radius: 0 0 20px 20px;
+    border-radius: 0 0 20px 0px;
 }
 
 .banner::before {
@@ -125,10 +199,13 @@ header button {
 }
 
 .quote-container {
+    
     position: relative;
-    max-width: 800px;
+    max-width: 500px;
     width: 100%;
-    padding: 20px;
+    padding: 10px;
+    margin-right: 10%;
+   
 }
 
 .quote-container .background {
@@ -138,12 +215,43 @@ header button {
     right: 0;
     bottom: 0;
     background-color: #c8102e;
-    transform: rotate(-3deg);
+    transform: rotate(6deg);
     border-radius: 10px;
     z-index: -1;
 }
 
+.quote {
+    background-color: white;
+    border-radius: 10px;
+    padding: 30px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
 
+.quote:before,
+.quote:after {
+    content: '“';
+    font-size: 40px;
+    color: #ec6a72;
+    position: absolute;
+    font-family: serif;
+}
+
+.quote:after {
+    content: '”';
+    font-size: 40px;
+    color: #aaa;
+    bottom: -10px;
+    right: 20px;
+}
+
+.quote p {
+    margin: 0;
+    font-size: 18px;
+    line-height: 1.5;
+    color: #333;
+
+}
 
 
 
@@ -154,8 +262,9 @@ header button {
 
 .content-section{
     margin-top: 20px;
-text-align: center;
-font-size: 40px;
+    text-align: center;
+    font-size: 40px;
+   
 
 }
 .notre {
@@ -163,6 +272,7 @@ font-size: 40px;
     align-items: flex-start;
     margin: 80px;
     padding: 0 ;
+    gap: 40px;
 }
 .notre .gauche {
     padding: 10px;
@@ -186,7 +296,7 @@ font-size: 40px;
 .notre .bg p {
     text-align: left;
     margin-top: 20px;
-    font-size: 25px; 
+    font-size: 23px; 
     line-height: 2;
 }
 
@@ -196,12 +306,14 @@ font-size: 40px;
     margin-top: 20px;
     margin-right: 750px;
     font-size: 20;
+    margin-left: 7%;
  
  }
 
 .contener {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 60px;
 
  
    
@@ -214,6 +326,8 @@ font-size: 40px;
     width: 20%;
     height: 0px;
     margin-top: 10px;
+    margin-left: 5%;
+    
     
 }
 
@@ -246,6 +360,8 @@ font-size: 40px;
    
     margin: 5px;
     padding: 20px;  
+    border-bottom: 4px solid rgba(206,0,51,255);
+    border-radius: 20px ;
 }
 
 .contener .right {
@@ -257,7 +373,7 @@ font-size: 40px;
 }
 
 .contener .right img {
-    height: 650px;
+    height: 550px;
     border-radius: 20px;
     margin-top: 2px; 
 
@@ -267,12 +383,26 @@ font-size: 40px;
 
 
 .sidebar {
+    position: relative;
     flex: 1;
     background-color: #f9f9f9;
     padding: 20px;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin-left: 10%;
+}
+
+.element {
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    background-color: rgb(138, 50, 50);
+    box-shadow: 0 0 10px rgba(205, 149, 59, 0.1);
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+    transform: rotate(27deg);
+    left: -50px;
+    top: 100px;
 }
 
 .sidebar-item {
@@ -312,10 +442,19 @@ font-size: 40px;
     color: #555;
 }
 
+#second {
+    width: 80px;
+    margin: 0 auto;
+    gap: 60px;
+    margin-top: 70px;
+
+}
 
 #second .sous {
     font-size: 25px;
     text-align: center;
+    
+    
 }
 
 
@@ -323,8 +462,9 @@ font-size: 40px;
     display: flex;
    justify-content: center;
    margin-bottom: 0;
-   margin: 0;
-   padding: 0;
+   /* margin: 0;
+   padding: 0; */
+   margin-left: 5%;
    
 }
 
@@ -354,6 +494,10 @@ font-size: 40px;
 
 /* Nos chiffres CSS */
 
+
+#chiff {
+    margin-top: 100px;
+}
 #chiff .chiffre h1 {
     font-size: 60pw;
     text-align: center;
@@ -377,6 +521,7 @@ font-size: 40px;
     font-size: 22px;
 }
 
+
 /* Notre équipe CSS */
 
 #menu {
@@ -391,7 +536,7 @@ font-size: 40px;
     font-size: 40px;
   
     color: #273e60;
-    margin-top: 40px;
+    margin-top: 30px;
     text-align: center;
 }
 .little-titre {
@@ -406,9 +551,15 @@ font-size: 40px;
     height: 600px;
     margin-top: 50px;
     justify-content: space-around;
+    
+}
+.icones i {
+    font-size: 40px;
+    color: #273e60;
+    margin-top: 10px;
 }
 .dishes .dish {
-    height: 280px;
+    height: 350px;
     width: 30%;
     /* background-color: #fff; */
     padding: 25px;
@@ -419,14 +570,17 @@ font-size: 40px;
     border-radius: 6px;
     margin-bottom: 35px;
     transition: 0.5s;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 5px;
+  
 
 }
 .dishes .dish  img {
     width: 150px;
     height: 140px;
-    mrgin-top: 10px;
+    margin-top: 40px;
+    margin-bottom: 20px;
     box-shadow: 20%;
+    border-radius: 50%;
 }
 .dishes .dish p {
     text-align: center;
@@ -574,73 +728,124 @@ textarea {
 
 /* Nos partenaires CSS */
 
-.parte {
+
+#partenaire h1 {
+    text-align: center;
+    font-size: 40px;
+    margin-top: 60px;
+
+}
+#partenaire .parte {
     display: flex;
     justify-content: space-between;
     display: grid;
-    grid-template-columns: 10px 10px 10px 10px 10px ;
+    grid-template-columns: 5px 5px 5px 5px 5px ;
     margin-top: 100px;
+    margin: 50px 270px 50px 150px;
 }
 
 /* footer CSS */
    
 footer {
-    margin-top: 300px;
-    display: flex;
-    align-items: center;
-    display: flex;
-    background-color: rgba(18,18,18,255);
-    color: #f8fafc;
-   
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 500px;
-    padding: 0 10%;
-  
+    background-color: #000;
+    color: #fff;
+    padding: 20px 0;
 }
 
-footer .logo img {
-    margin-top: 0;
+.container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.footer-section {
+    flex: 1;
+    margin: 20px;
+    min-width: 250px;
+}
+
+.logo-social {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.logo-social img {
+    height: 50px;
+    margin-bottom: 20px;
+}
+.logo-social img  {
+   
     filter:brightness(0) invert(1);
     height: 80px;
 
 }
 
-
-
-footer .partie2 h1 {
-    font-size: 35px;
-    margin-bottom: 80px;
-}
-.partie2 h2 {
-  font-size: 20px;
+.social-icons {
+    display: flex;
+    justify-content: center;
 }
 
-footer .partie3 h1 {
-   font-size: 35px;
-    margin-bottom: 30px;
+.social-icons a {
+    margin: 0 10px;
 }
 
-footer .partie4 h1  {
-    font-size: 35px;
-    margin-bottom: 40px;
-  
+.social-icons img {
+    width: 30px;
+    height: 30px;
 }
 
+.links ul {
+    list-style: none;
+}
 
-.terminal {
-    background-color: rgba(206,0,51,255);
-    height: 80px;
-    align-content: center;
+.links ul li {
+    margin: 10px 0;
+}
+
+.links ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.contact p, .newsletter p {
+    margin: 10px 0;
+}
+
+.newsletter form {
+    display: flex;
+}
+
+.newsletter input {
+    padding: 10px;
+    border: none;
+    border-radius: 5px 0 0 5px;
+    flex: 1;
+}
+
+.newsletter button {
+    padding: 10px;
+    border: none;
+    border-radius: 0 5px 5px 0;
+    background-color: #E5004F;
+    color: #fff;
+    cursor: pointer;
+}
+
+.footer-bottom {
+    background-color: #E5004F;
+    color: #fff;
     text-align: center;
+    padding: 10px 0;
+    margin-top: 20px;
+    justify-content: space-between;
+    display: flex;
+}
 
+.footer-bottom .heart {
+    color: #fff;
 }
-.terminal h2 {
-    font-size: 16px;
-    text-align: center;
-    
-    color: #f8fafc;
-    
-    
-}
+
